--- a/www.unhackable.com/style.css
+++ b/www.unhackable.com/style.css
@@ -13,10 +13,10 @@ nav {
     box-sizing: border-box;
 }
 
-.logo-image {
-    max-width: 960px;
-    max-height: 100vh;
+div {
+    width: 100%;
     margin: auto;
+    text-align: center;
 }
 
 body {
